# crypto-simulation

./: Cargo.toml  README.md
.github/workflows/: run-bitcoin-simulation.yml
src/: cli.rs  lib.rs  main.rs  models.rs  performance_bench.rs  prices.rs  run_simulations.rs  simulations.rs  statistics.rs
